--- a/Styles/indexstyle.css
+++ b/Styles/indexstyle.css
@@ -23,7 +23,7 @@
     position: absolute;
     z-index: 2;
     font-size: 150px;
-    color: rgba(0, 0, 0, 0.911);
+    color: black;
     padding: 50px 0 0 0 ;
     background:red;
     background-size: 400%;
@@ -37,7 +37,7 @@
     position: absolute;
     z-index: 2;
     font-size: 80px;
-    color:rgb(0, 0, 0);
+    color: black;
     padding: 200px 0 0 0 ;
     background: red;
     background-size: 400%;
