--- a/Styles/indexstyle.css
+++ b/Styles/indexstyle.css
@@ -13,7 +13,6 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
-   
     z-index: 1;
     margin: 0;
 }
@@ -29,6 +28,7 @@
     background-size: 400%;
     padding: 40px;
     -webkit-background-clip: text ;
+    -webkit-text-stroke: 5px transparent;
     
   }
 
