--- a/Styles/indexstyle.css
+++ b/Styles/indexstyle.css
@@ -1,4 +1,6 @@
-.container{
+@media (min-with: 480px)
+{
+    .container{
     display: flex;
     position: relative;
     justify-content: center;
@@ -97,4 +99,5 @@
 }
 .icon{
   width: 35px;
+}
 }
