--- a/Styles/indexstyle.css
+++ b/Styles/indexstyle.css
@@ -35,7 +35,8 @@
   }
 
 .univ{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /*font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;*/
+    font-family: 'Bungee', sans-serif;
     position: absolute;
     z-index: 2;
     font-size: 80px;
