--- a/Styles/indexstyle.css
+++ b/Styles/indexstyle.css
@@ -28,9 +28,9 @@
     padding: 80px 0 0 0 ;
     background:red;
     background-size: 400%;
-    padding: 30px;
-    /*-webkit-background-clip: text ;
-    -webkit-text-stroke: 5px transparent;*/
+    padding: 40px;
+    -webkit-background-clip: text ;
+    -webkit-text-stroke: 5px transparent;
     
   }
 
@@ -45,8 +45,8 @@
     background: red;
     background-size: 400%;
     padding: 200px;
-    /*-webkit-background-clip: text ;
-    -webkit-text-stroke: 5px transparent;*/
+    -webkit-background-clip: text ;
+    -webkit-text-stroke: 5px transparent;
 
 }
 
